# otp-exchange

./: .gitignore  Cargo.toml  README.md  data_packets.rs  dp_2.rs  imports.rs  otp.rs  pyproject.toml
src/: data.rs  databook.rs  datasheet.rs  lib.rs  main.rs  otp.rs  traits.rs
tests/: tests.rs
tests/speed/: mod.rs  test_speed.rs
tests/unit/: test_data.rs
