[package]
name = "otp_exchange"
version = "0.1.1"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "otp_exchange"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["rlib"]

[dependencies]
rand = "0.8.5"
zip-extensions = "0.8.1"


